kubernetes-deployment/environments/prod/ingress.yaml
apiVersion: extensions/v1
kind: Ingress
metadata:
  name: myapp-ingress
spec:
  rules:
    - host: prod.api.com
